# dnsproxy.rs

./: .gitignore  Cargo.toml  README.md
src/: bootstrap.rs  cache.rs  client.rs  doh.rs  doh3.rs  doq.rs  dot.rs  error.rs  lib.rs  listener.rs  main.rs  options.rs  plain_tcp.rs  plain_udp.rs  server.rs  serverhttp3.rs  serverhttps.rs  serverquic.rs  servertls.rs  upstream.rs  upstream_config.rs  upstream_url.rs  wire.rs
src/client/: bootstrap.rs  dnscrypt.rs  doh.rs  doh3.rs  doq.rs  dot.rs  plain_tcp.rs  plain_udp.rs  upstream.rs  upstream_config.rs  upstream_url.rs  wire.rs
src/client/dnscrypt/: config.rs  crypto.rs  keygen.rs  stamp.rs
src/listener/: dnscrypt.rs  doh.rs  doh3.rs  doh_auth.rs  doq.rs  dot.rs  io.rs  tls_config.rs
tests/: live_exchange.rs  plain_dns_proxy.rs
