[package]
name = "doh-upstream"
version = "0.6.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "A DNS-over-HTTPS upstream client, ported from AdGuard dnsproxy's Go implementation"

[[bin]]
name = "doh-upstream"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hickory-proto = "0.26"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "tokio",
    "http1",
    "http2",
] }
tower-service = "0.3"
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "logging",
    "tls12",
], optional = true }
rustls-pki-types = "1"
webpki-roots = "1"
base64 = "0.22"
thiserror = "2"
rand = "0.10"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = "0.6"
lru = "0.18"

quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = [
    "server-auto",
    "tokio",
    "http1",
    "http2",
] }
rcgen = "0.14"

[features]
default = ["http3", "crypto-ring"]
http3 = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:rustls", "dep:http"]

# Exactly one of these must be enabled; main.rs enforces this at compile time.
# ring is the pure-Rust backend (smaller binary, no C toolchain required).
# aws-lc-rs additionally supports FIPS validation and post-quantum key
# exchange, at the cost of a larger binary and a C/assembly build step.
crypto-ring = ["tokio-rustls/ring", "rustls?/ring"]
crypto-aws-lc-rs = ["tokio-rustls/aws-lc-rs", "rustls?/aws-lc-rs"]

[profile.release]
panic = "abort"
strip = true

# Size-optimized build for shipping: adds LTO and single-codegen-unit on top
# of `release`, at the cost of much slower compile times. Use for final
# builds, not the everyday dev loop: `cargo build --profile dist`.
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
